<resources>
    <string name="app_name">Fragments</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username_or_password">Username or password</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="sing_up">Sing up</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="i_agree_to_the_terms">I agree to the Terms</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="welcome_to_main_fragment">Welcome to Main Fragment</string>
    <string name="send_password_reset_email">Send password reset email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_sent">Email sent.</string>
    <string name="user_not_found">No user found with this email.</string>
    <string name="ent_email">Enter Email</string>
    <string name="ent_pass">Enter password</string>
    <string name="first_name">First Name :</string>
    <string name="last_name">Last Name :</string>
    <string name="user_email">User Email :</string>
    <string name="email_verified">Email Verified :</string>
    <string name="enter_username">Enter username</string>
    <string name="or_sign_up_using">Or Sign Up Using</string>
    <string name="log_fail">Login failed</string>
    <string name="empty_email">Email can\'t empty</string>
    <string name="invalid_email">Invalid email</string>
    <string name="pass_empty">Password can\'t be empty</string>
    <string name="username_empty">Username can\'t be empty</string>
    <string name="pass_short">Password too short</string>
    <string name="paa_not_match">Password not match</string>
    <string name="confirm_pass_empty">Confirm password empty</string>
    <string name="ref_fail">Registration failed</string>
    <string name="logout_succ">Logout succeed</string>
    <string name="logout_failed">Logout failed</string>
    <string name="already_register_login_here">Already Register ? Login Here !</string>
    <string name="user_reg">User was registered</string>
    <string name="res_Fail">Reset Failed</string>
    <string name="reset_suc">Reset success, check your email"</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="image_was_clicked">Image view clicked</string>
    <string name="iv_clicked">Image was clicked</string>
    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="exception_called">Exception called</string>
    <string name="no_name">No name</string>
    <string name="no_date">No date</string>
    <string name="fail_data">Failed to get data</string>
    <string name="have_to_agree_with_terms">You should agree with Terms</string>
</resources>